--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -417,6 +417,9 @@
     
     <!-- Bool whether to show MotoDoze Gestures in Universe -->
     <bool name="config_showMotoDozeGestures">true</bool>
+    
+    <bool name="config_proximityCheckOnWake">true</bool>
+    <bool name="config_proximityCheckOnWakeEnabledByDefault">true</bool>
 
     <!-- Component name of the service providing geofence API support. -->
     <string name="config_geofenceProvider" translatable="false">com.qualcomm.location</string>
