--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -414,6 +414,9 @@
          don't support RIL_REQUEST_GET_RADIO_CAPABILITY
          format is UMTS|LTE|... -->
     <string translatable="false" name="config_radio_access_family">GSM | WCDMA | LTE | CDMA | EVDO</string>
+    
+    <!-- Bool whether to show MotoDoze Gestures in Universe -->
+    <bool name="config_showMotoDozeGestures">true</bool>
 
     <!-- Component name of the service providing geofence API support. -->
     <string name="config_geofenceProvider" translatable="false">com.qualcomm.location</string>
