--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -403,6 +403,9 @@
     <bool name="config_enableAutoPowerModes">true</bool>
     
     <bool name="config_supportDoubleTapWake">true</bool>
+    
+    <!-- Bool whether to show MotoDoze Gestures in Universe -->
+    <bool name="config_showMotoDozeGestures">true</bool>
 
     <!-- The RadioAccessFamilies supported by the device.
          Empty is viewed as "all".  Only used on devices which
